--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 
     <div class="actions">
       <button id="startBtn" class="btn">开始 / Start</button>
+      <p id="remaining" style="text-align:center;color:#666;font-size:14px;margin-top:8px;">
+  剩餘次數：--
+</p>
     </div>
 
     <div class="chipRow">
@@ -93,6 +96,18 @@
     <div id="status" class="muted status"></div>
   </div>
 
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script>
+const tg = window.Telegram?.WebApp;
+if (tg) tg.expand();
+  function updateRemainingDisplay() {
+  const remaining = getRemaining();
+  const el = document.getElementById('remaining');
+  if (el) {
+    el.textContent = `剩餘次數：${remaining} 次`;
+  }
+}
+</script>
 <script>
 (() => {
   const prizes = [
@@ -191,7 +206,14 @@
         drawWheel();
         const idx = getIndexByRotation(currentRotation);
         finish(prizes[idx], idx);
-      }
+      
+      // ✅ 回傳抽獎結果給 Telegram bot
+if (window.Telegram?.WebApp) {
+  window.Telegram.WebApp.sendData(JSON.stringify({
+    type: "spin_result",
+    prize: prizes[idx]
+  }));
+}
     })(start);
   }
 
@@ -274,6 +296,7 @@
     startBtn.disabled = getRemaining()<=0;
   }
 
+  updateRemainingDisplay();
   // Buttons
   const startBtn = document.getElementById('startBtn');
   const subBtn = document.getElementById('subBtn');
@@ -283,7 +306,8 @@
 
   subBtn.addEventListener('click', () => {
     window.open('https://t.me/pcatdolls', '_blank');
-    state.subscribed = true; saveState(state); updateStatus();
+ state.subscribed = true; saveState(state); updateStatus();
+    updateRemainingDisplay();
     startBtn.disabled = getRemaining()<=0;
   });
 
@@ -297,6 +321,7 @@
       if(navigator.share){ await navigator.share(shareData); }
       else{ window.open(`https://t.me/share/url?url=${encodeURIComponent(location.href)}&text=${encodeURIComponent(shareData.text)}`,'_blank'); }
       state.shared = true; saveState(state); updateStatus();
+      updateRemainingDisplay();
       startBtn.disabled = getRemaining()<=0;
     }catch(e){ /* user cancelled */ }
   });
@@ -304,6 +329,7 @@
   // Init
   drawWheel();
   updateStatus();
+  updateRemainingDisplay();
   startBtn.disabled = getRemaining()<=0;
   window.addEventListener('resize', () => {
     // (for simplicity this demo keeps canvas static size)
